--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2021 The LineageOS Project
+     Copyright (C) 2020 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,44 +15,35 @@
      limitations under the License.
 -->
 <resources>
-    <!-- Ambient settings -->
-    <string name="ambient_enable">Use ambient display</string>
 
-    <string name="doze_brightness_title">Always on brightness</string>
-    <string name="doze_brightness_summary">%s mode is enabled</string>
+    <!-- Dirac settings -->
+    <string name="dirac_title">Mi Sound Enhancer</string>
+    <string name="dirac_summary">Optimize audio quality</string>
+    <string name="dirac_headset_title">Choose headphones type</string>
+    <string name="dirac_preset_title">Choose a preset</string>
+    <string name="dirac_enable">Use Mi Sound Enhancer</string>
+    <string name="dirac_hifi_title">Hi-Fi</string>
+    <string name="dirac_hifi_summary">Decrease noise and Distortion and increase audio quality</string>
 
-    <!-- Thermal Profiles -->
-    <string name="thermal_title">Thermal Profiles</string>
+    <!-- Thermal profiles -->
+    <string name="thermal_title">Thermal profiles</string>
     <string name="thermal_summary">Adjust per-app thermal profiles for optimum performance</string>
-    <string name="thermal_default">Default</string>
-    <string name="thermal_benchmark">Benchmark</string>
+    <string name="thermal_default">No optimization</string>
+    <string name="thermal_benchmark">Performance</string>
     <string name="thermal_browser">Browser</string>
     <string name="thermal_camera">Camera</string>
     <string name="thermal_dialer">Dialer</string>
     <string name="thermal_gaming">Gaming</string>
     <string name="thermal_streaming">Streaming</string>
 
-    <!-- Dirac settings -->
-    <string name="dirac_enable">Enable dirac</string>
-    <string name="dirac_title">Dirac™ Sound</string>
-    <string name="dirac_summary">Optimize audio quality</string>
-    <string name="dirac_headset_title">Choose headphones type</string>
-    <string name="dirac_preset_title">Choose a preset</string>
-    <string name="dirac_hifi_enable_title">Enable Hi-fi</string>
-    <string name="dirac_hifi_title">Hi-Fi</string>
-    <string name="dirac_hifi_summary">Decrease noise and Distortion and increase audio quality</string>
-
     <!-- Dirac settings: Headset types -->
-    <string name="dirac_headset_default">Default</string>
     <string name="dirac_headset_earbuds">Mi Earbuds</string>
     <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
     <string name="dirac_headset_piston_1">Mi Piston-1</string>
-    <string name="dirac_headset_general">General</string>
     <string name="dirac_headset_general_inear">General In-Ear</string>
     <string name="dirac_headset_piston_basic">Basic Edition</string>
     <string name="dirac_headset_piston_2">Mi Piston-2</string>
     <string name="dirac_headset_piston_standard">Standard Edition</string>
-    <string name="dirac_headset_headphone">Mi Headphones</string>
     <string name="dirac_headset_piston_youth">Youth Edition</string>
     <string name="dirac_headset_piston_color">Color Edition</string>
     <string name="dirac_headset_in_ear">Mi In-Ear</string>
@@ -70,9 +61,15 @@
     <string name="dirac_headset_bluetooth_collar">Mi Bluetooth Neckband</string>
     <string name="dirac_headset_bluetooth_linefree">Mi Bluetooth Earphones</string>
     <string name="dirac_headset_redmi_earphones">Redmi Earphones</string>
-    <string name="dirac_headset_dual_driver_in_ear">Mi Dual Driver In-ear Earphones</string>
 
     <!-- Dirac settings: Equalizer presets -->
+    <string name="dirac_preset_live">Live</string>
+    <string name="dirac_preset_balanced">Balanced</string>
+    <string name="dirac_preset_bass_reduction">Bass Reduction</string>
+    <string name="dirac_preset_treble_reduction">Treble Reduction</string>
+    <string name="dirac_preset_soft_bass">Soft Bass</string>
+    <string name="dirac_preset_soft_treble">Soft Treble</string>
+    <string name="dirac_preset_bass_booster">Bass Booster</string>
     <string name="dirac_preset_default">Default</string>
     <string name="dirac_preset_rock">Rock</string>
     <string name="dirac_preset_jazz">Jazz</string>
@@ -84,41 +81,31 @@
     <string name="dirac_preset_country">Country</string>
     <string name="dirac_preset_dance">Dance</string>
     <string name="dirac_preset_metal">Metal</string>
-    <string name="dirac_preset_bass_booster">Bass Booster</string>
-    <string name="dirac_preset_live">Live</string>
-    <string name="dirac_preset_balanced">Balanced</string>
-    <string name="dirac_preset_bass_reduction">Bass Reduction</string>
-    <string name="dirac_preset_treble_reduction">Treble Reduction</string>
-    <string name="dirac_preset_soft_bass">Soft Bass</string>
-    <string name="dirac_preset_soft_treble">Soft Treble</string>
 
-    <!-- Dirac settings: Sound Scenes -->
-    <string name="music_headset_scenario_select">Choose scene</string>
+    <!-- Scene Selection -->
+    <string name="music_headset_scenario_select">Select scene</string>
     <string name="music_headset_scenario_intelligent">Smart</string>
     <string name="music_headset_scenario_music">Music</string>
-    <string name="music_headset_scenario_video">Movie / Video</string>
+    <string name="music_headset_scenario_video">Video</string>
     <string name="music_headset_scenario_vocal">Voice</string>
 
-    <!-- Dolby Atmos -->
-    <string name="dolby_title">Dolby Atmos</string>
-    <string name="dolby_enable">Use Dolby Atmos</string>
-    <string name="dolby_profile_title">Choose a profile</string>
-    <string name="dolby_preset">Equalizer preset</string>
-    <string name="dolby_profile_dynamic">Dynamic</string>
-    <string name="dolby_off">Off</string>
-    <string name="dolby_on">On</string>
-    <string name="dolby_low">Low</string>
-    <string name="dolby_medium">Medium</string>
-    <string name="dolby_high">High</string>
-    <string name="dolby_max">Max</string>
-    <string name="dolby_unknown">Unknown</string>
-    <string name="dolby_on_with_profile">On (%1$s)</string>
-    <string name="dolby_category_settings">Settings</string>
-    <string name="dolby_bass_enhancer">Bass enhancer</string>
-    <string name="dolby_dialogue_enhancer">Dialogue enhancer</string>
-    <string name="dolby_virtualizer">Surround virtualizer</string>
-    <string name="dolby_volume_leveler">Volume leveler</string>
-    <string name="dolby_connect_headphones">Connect headphones</string>
-    <string name="dolby_reset_profile">Reset to defaults</string>
-    <string name="dolby_reset_profile_toast">Succesfully reset settings for %1$s profile</string>
+    <!-- Per-app refresh rate -->
+    <string name="refresh_title">Per-app refresh rate</string>
+    <string name="refresh_summary">Set the maximum refresh rate for a specific application</string>
+    <string name="refresh_default">Default</string>
+    <string name="refresh_standard">60Hz</string>
+    <string name="refresh_extreme">120Hz</string>
+
+    <!-- Doze Strings -->
+    <string name="doze_brightness_low">Low brightness</string>
+    <string name="doze_brightness_high">High brightness</string>
+    <string name="doze_brightness_adaptive">Adaptive brightness</string>
+    <string name="doze_brightness_title">Doze brightness level</string>
+    <string name="doze_brightness_summary">Brightness level of doze pulse screen (% of max allowed brightness)</string>
+
+    <!-- Clear Speaker -->
+   <string name="clear_speaker_title">Clear speaker</string>
+   <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
+   <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.</string>
+
 </resources>
