--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -17,13 +17,13 @@
 <resources>
 
     <!-- Dirac settings -->
-    <string name="dirac_title">Mi Sound Enhancer</string>
+    <!-- <string name="dirac_title">Mi Sound Enhancer</string>
     <string name="dirac_summary">Optimize audio quality</string>
     <string name="dirac_headset_title">Choose headphones type</string>
     <string name="dirac_preset_title">Choose a preset</string>
     <string name="dirac_enable">Use Mi Sound Enhancer</string>
     <string name="dirac_hifi_title">Hi-Fi</string>
-    <string name="dirac_hifi_summary">Decrease noise and Distortion and increase audio quality</string>
+    <string name="dirac_hifi_summary">Decrease noise and Distortion and increase audio quality</string> -->
 
     <!-- Thermal profiles -->
     <string name="thermal_title">Thermal profiles</string>
@@ -37,7 +37,7 @@
     <string name="thermal_streaming">Streaming</string>
 
     <!-- Dirac settings: Headset types -->
-    <string name="dirac_headset_earbuds">Mi Earbuds</string>
+    <!-- <string name="dirac_headset_earbuds">Mi Earbuds</string>
     <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
     <string name="dirac_headset_piston_1">Mi Piston-1</string>
     <string name="dirac_headset_general_inear">General In-Ear</string>
@@ -60,10 +60,10 @@
     <string name="dirac_headset_piston_typec">Mi In-Ear Headphones (Type-C)</string>
     <string name="dirac_headset_bluetooth_collar">Mi Bluetooth Neckband</string>
     <string name="dirac_headset_bluetooth_linefree">Mi Bluetooth Earphones</string>
-    <string name="dirac_headset_redmi_earphones">Redmi Earphones</string>
+    <string name="dirac_headset_redmi_earphones">Redmi Earphones</string> -->
 
     <!-- Dirac settings: Equalizer presets -->
-    <string name="dirac_preset_live">Live</string>
+    <!-- <string name="dirac_preset_live">Live</string>
     <string name="dirac_preset_balanced">Balanced</string>
     <string name="dirac_preset_bass_reduction">Bass Reduction</string>
     <string name="dirac_preset_treble_reduction">Treble Reduction</string>
@@ -80,14 +80,14 @@
     <string name="dirac_preset_electronic">Electronic</string>
     <string name="dirac_preset_country">Country</string>
     <string name="dirac_preset_dance">Dance</string>
-    <string name="dirac_preset_metal">Metal</string>
+    <string name="dirac_preset_metal">Metal</string> -->
 
     <!-- Scene Selection -->
-    <string name="music_headset_scenario_select">Select scene</string>
+    <!-- <string name="music_headset_scenario_select">Select scene</string>
     <string name="music_headset_scenario_intelligent">Smart</string>
     <string name="music_headset_scenario_music">Music</string>
     <string name="music_headset_scenario_video">Video</string>
-    <string name="music_headset_scenario_vocal">Voice</string>
+    <string name="music_headset_scenario_vocal">Voice</string> -->
 
     <!-- Per-app refresh rate -->
     <string name="refresh_title">Per-app refresh rate</string>
